# aart

./: .gitignore  CMakeLists.txt  README.md  aart.sln  main.cpp
aart/: Art.h  Charmap.h  Colors.h  Comparators.h  aart.vcxproj  aart.vcxproj.filters  color_quantization.cpp  color_quantization.h  convert.h  cuda_kernels.cu  cuda_kernels.h  launch_type.h  main.cpp  scale.h
aart/cuda/: Charmap.h  Colors.h  kernels.cu  kernels.h
aart/palette-generator/: palette-generator.py
include/aart/: Charmap.hpp  ColorSpaceFilter.hpp  ConvertFilter.hpp  FixedPaletteArtFilter.hpp  GrayscaleFilter.hpp  IFilter.hpp  IResource.hpp  IResourceManager.hpp  Image.hpp  ImageManager.hpp  Metrics.hpp  MonochromeArtFilter.hpp  Pipe.hpp  ScaleFilter.hpp  utility.hpp  utils.h
